# percefons

./: .env_example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  logging.conf  pyproject.toml  requirements.txt
app_migrations/: env.py
app_migrations/versions/: 3b2e73122dd3_migration_generation.py  46933fd6f721_permission_model_is_added.py  7bf95c06f2f7_migration_generation.py
requirements/: base.txt  dev.txt
src/package_name/: __init__.py  __main__.py
src/percefons/: __init__.py  main.py  utils.py
src/percefons/application/: exceptions.py  services.py
src/percefons/application/usecases/: login.py  user_registration.py
src/percefons/core/settings/: base.py
src/percefons/domain/: exceptions.py  repositories.py  validators.py
src/percefons/domain/entities/: __init__.py  permission.py  user.py
src/percefons/infrastructure/db/: initialization.py  session.py
src/percefons/infrastructure/db/models/: __init__.py  base.py  permission.py  user.py  user_perms.py
src/percefons/infrastructure/managers/: init_db.py  sudo.py
src/percefons/infrastructure/repositories/: permission_repository.py  user_perm_repository.py  user_repository.py
src/percefons/infrastructure/services/: jwt_auth.py  password_handler.py
src/percefons/interfaces/api/: utils.py
src/percefons/interfaces/api/routes/: auth.py
src/percefons/interfaces/api/schema/: user_registration_schema.py
src/percefons/interfaces/api/schemas/: __init__.py  exception_schemas.py  login_schemas.py  user_registration_schema.py
tests/: test_package_name.py
tutos/: argparse.md  async_requests.md  asynchron.md  class_decorators.md  enum.md  function_decorators.md  glob.md  lock_threading.md  queue.md  requests.md  server.md
