[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-name"
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["origin", "python3"]
dependencies = [
    "requests>=2.25.1",
    "python-dotenv==1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/my-python-package"
"Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mycmd = "package_name.__main__:main"

