[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percefons"
version = "0.1.0"
# requires-python = ">=3.10"
description = "Fast API Template with clean architecture and REST API configuration + database + authentication system."
readme = "README.md"
authors = [
    { name = "DOCTOR MOKIRA", email = "dr.mokira@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["percefons", "python3", "fastapi", "rest-api", "clean-architecture", "swagger"]
dependencies = [
    "python-dotenv==1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "pyjwt",
    "passlib[bcrypt]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "alembic",
    "loguru",
]

[project.urls]
"Homepage" = "https://github.com/mokira3d48/percefons"
# "Bug Tracker" = "https://github.com/your-username/my-python-package/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
start = "percefons.main:main"
init-db = "percefons.infrastructure.managers.init_db:main"
